--- a/portfolio/future_goals.html
+++ b/portfolio/future_goals.html
@@ -116,7 +116,7 @@
             <a href="https://www.facebook.com/adil.wadhwania"><img class="img-fluid" alt="facebook-link" src="images/2015-10-15_14-58-20__facebook.png" style="width: 10%;"></a>
         </div> 
          <div class="col-sm-6 col-md-6 center link-img ">
-             <a href=""> <img  src="images/2015-10-15_14-58-46__twitter%20(1).png" alt="twitter-link" style="width: 15%;  padding-bottom: 6%;"></a>
+             <a href="https://twitter.com/Adil32408562"> <img  src="images/2015-10-15_14-58-46__twitter%20(1).png" alt="twitter-link" style="width: 15%;  padding-bottom: 6%;"></a>
         </div>   
      </div>
 </footer>     
