--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -118,30 +118,30 @@
         <div class="row">
             <div class="col-sm-12 col-md-7">
                 <h2>Skills</h2>
-            <h3><b>Programming : </b></h3>    
+            <h3><b>Programming (65%): </b></h3>    
              <div class="progress" style="height: 22px;">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
              </div>
-          <h3><b>Web-Designing : </b></h3> 
+          <h3><b>Web-Designing (70%): </b></h3> 
                  <div class="progress" style="height: 22px;">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
              </div>
            <details>
              <summary><b>English</b></summary>
                
-               <h3>listening : </h3>
+               <h3>listening (80%): </h3>
                  <div class="progress" style="height: 22px;">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                  </div>
-               <h3>Speaking : </h3>
+               <h3>Speaking (80%): </h3>
                  <div class="progress" style="height: 22px;">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                 </div>
-               <h3>Reading :</h3>
+               <h3>Reading (85%):</h3>
                  <div class="progress" style="height: 22px;">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                  </div>
-               <h3>Writing :</h3>
+               <h3>Writing (85%):</h3>
                  <div class="progress" style="height: 22px;">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                  </div>
