--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -184,7 +184,7 @@
                   <img src="images/helpingothers.gif" class="card-img-top" alt="coding-together" style="width: 100%">
                   <div class="card-body">
                     <p class="card-text">
-                        <b>I like helping others because when we help someone their is lots of new things to know . For example if a friend of mine has a problem in programing or he got and error . Which can be new for me also ,if its new thing for me i would think about it and try to solve it . <br><br>So here i learned new things after helping my friend . Now its benefit to both of us because , we both together had solved the problem due to which it took less time to solve  and whenever we get the same error or problem again we can solve it easily.</b> </p>
+                        <b>I like helping others because when we help someone their are lots of new things to know . For example if a friend of mine has a problem in programing or he got and error . Which can be new for me also ,if its new thing for me i would think about it and try to solve it . <br><br>So here i learned new things after helping my friend . Now its benefit to both of us because , we both together had solved the problem due to which it took less time to solve  and whenever we get the same error or problem again we can solve it easily.</b> </p>
                  </div>
               </div>
             </div>
