--- a/portfolio/accomplishments.html
+++ b/portfolio/accomplishments.html
@@ -54,7 +54,7 @@
     <div class="row main-content">
          <div class="col-md-7 content center">
             <h3><b>C Programming</b></h3>
-             <p>As we all know that C language is basic language of programming . So when started with the language ,their were many mistakes (syntex,logical..etc) made by me while coding. But by practicing and learning whole course of C language in udemy. I had get rid of almost all the mistakes. </p>
+             <p>As we all know that C language is basic language of programming . So when i started with the C language ,their were many mistakes (syntex,logical..etc) made by me while coding. But by practicing and learning whole course of C language in udemy. I had get rid of almost all the mistakes. </p>
         </div>
         <div class="col-md-5 content-img">
             <img class="img-fluid" src="images/c%20programming.jpg" alt="c language img">
@@ -71,7 +71,7 @@
         </div>
          <div class="col-md-7 content center">
             <h3><b>HTML 5</b></h3>
-             <p><b>Html</b> is know as skeleton of web page.I was very must interested in web design ,and started with <b>Html</b>.By learning on various online plateforms ,first on youtube then on udemy but still was struggling with html.And then finally after completing the web design course of university of michigan. I  had gain great knowledge and fluency in web design.</p>
+             <p><b>Html</b> is know as skeleton of web page.I was very much interested in web design ,and started with <b>Html</b>.By learning on various online plateforms ,first on youtube then on udemy but still was struggling with html.And then finally after completing the web design course of university of michigan. I  had gain great knowledge and fluency in web design.</p>
         </div>
       </div>       
     <!-- end of row(html 5) -->
