--- a/portfolio/future_goals.html
+++ b/portfolio/future_goals.html
@@ -80,7 +80,7 @@
             <img class="d-md-block d-lg-none sm-img" src="images/java.jpg" alt="java programming">
           <p class="lead">Java is a class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible .</p>
           <hr class="my-4">
-            <p>Java is a <abbr title="write once run anywhere"> WORA</abbr> programming language.Meaning that java code can run on all plateforms that support java without the need for recompliation. Java applications are compiled to bytecode that can run on any Java virtual machine (JVM) regardless of the underlying computer architecture.</p>
+            <p>Java is a <abbr title="write once run anywhere"> WORA</abbr> programming language,Meaning that java code can run on all plateforms that support java without the need for recompliation. Java applications are compiled to bytecode that can run on any Java virtual machine (JVM) regardless of the underlying computer architecture.</p>
         </div>
       </div>
     </div>
