--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,7 +87,7 @@
             </div>
         </div>
         <!-- end of row (personal info)-->
-    <div style="background-color: #f6f8fa">    
+    <div class="edu-pro" style="background-color: #f6f8fa">    
         <div class="row">
             <div class="col-md-10">
                 <h3>Educational Profile</h3>
