--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -126,7 +126,7 @@
                  <div class="progress" style="height: 22px;">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
              </div>
-           <details>
+           <details open>
              <summary><b>English</b></summary>
                
                <h3>listening (80%): </h3>
@@ -161,8 +161,8 @@
                 <div class="card-hearder "><h3>Programming</h3></div>   
                   <img src="images/coding-vs-programming-2-1024x439.jpg" class="card-img-top " alt="coding-pic" style="width:100%; height:auto">
                   <div class="card-body">   
-                    <p class="card-text">A few years ago my Programming skills were not too good . But when started programming in the<b>C</b>language it was an amazing experience.<br><br><b>Then programming most of the time was something like addiction, learning new languages, implement new things and realising the power of programming. Whenever there is error in program, I always wonder about what would be the solution for this error and think until its been solved. And this is how programming became an hobby beside the reading and helping others<br><br></b>
-                    <em>Still trying to imporve more in coding skills by practicing .</em><br>
+                    <p class="card-text">Few years ago my Programming skills were not too good. But when I started programming in the<b>C</b>language it was an amazing experience.<br><br><b>Then programming most of the time was something like addiction, learning new languages, implement new things and realising the power of programming. Whenever there is an error in a program, I always wonder about what would be the solution for this error and think until it's been solved. And this is how programming became an hobby beside the reading and helping others<br><br></b>
+                    <em>Still trying to imporve more in coding skills by practicing.</em><br>
                     </p>
                   </div>
                </div>
@@ -173,7 +173,7 @@
                 <div class="card-hearder "><h3>Reading</h3></div>                         
                   <img src="images/reading.jpg" class="card-img-top " alt="e-articleimg" style="width: 100%; ">
                   <div class="card-body">      
-                      <p class="card-text">Reading is my hobby ,but not just reading the books you get in your academics. Most of the time reading articles related to <b>Technology, political status in our country and great personalities like <em>Elon Musk, Bill Gates and Ratan Tata is my choice.</em><br><br> Especially love reading about the articles publishes the daily informtion of companies in which  Elon Musk is CEO beacuse he comes up with a unique idea and it needs lots of technology to implement the idea.The great example would be self-driving Cars and stralink.</b></p>
+                      <p class="card-text">Reading articles related to <b>Technology, political status in our country and great personalities like <em>Elon Musk, Bill Gates and Ratan Tata, etc is my hobby.</em><br><br>Especially love reading about the articles which publishes the daily informtion of companies in which  Elon Musk is CEO beacuse he comes up with a unique idea and it needs lots of technology to implement the idea. The great example would be self-driving Cars and stralink.<br><br></b></p>
                   </div>
                 </div>
              </div>
@@ -184,7 +184,7 @@
                   <img src="images/helpingothers.gif" class="card-img-top" alt="coding-together" style="width: 100%">
                   <div class="card-body">
                     <p class="card-text">
-                        <b>I like helping others because when we help someone their are lots of new things to know. For example if a friend of mine has a problem in programing or he got and error. Which can be new for me also, then I would think about it and try to solve it. <br><br>So here I learned new things after helping my friend . Now its benefit to both of us because, we both together had solved the problem due to which it took less time to solve  and whenever we get the same error or problem again we can solve it easily.</b> </p>
+                         <b>I like helping others because when we help someone we can learn lots of new things. For example if a friend of mine has a problem in programing or he got an error. Which can be new to me also, if its new thing for me I would think about it and try to solve it. <br><br>So here I learned new things after helping my friend. Now its benefit to both of us because, we both together had solved the problem due to which it took less time to solve  and whenever we get the same error or problem again we can solve it easily.</b>  </p>
                  </div>
               </div>
             </div>
