--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -173,7 +173,7 @@
                 <div class="card-hearder "><h3>Reading</h3></div>                         
                   <img src="images/reading.jpg" class="card-img-top " alt="e-articleimg" style="width: 100%; ">
                   <div class="card-body">      
-                      <p class="card-text">Reading articles related to <b>Technology, political status in our country and great personalities like <em>Elon Musk, Bill Gates and Ratan Tata, etc is my hobby.</em><br><br>Especially love reading about the articles which publishes the daily informtion of companies in which  Elon Musk is CEO beacuse he comes up with a unique idea and it needs lots of technology to implement the idea. The great example would be self-driving Cars and stralink.<br><br></b></p>
+                      <p class="card-text">Reading articles related to <b>Technology, political status in our country and great personalities like <em>Elon Musk, Bill Gates and Ratan Tata, etc is my hobby.</em><br><br>Especially love reading about the articles which publishes the daily informtion of companies in which  Elon Musk is CEO beacuse he comes up with an unique idea and it needs lots of technology to implement the idea. The great example would be self-driving Cars and stralink.<br><br></b></p>
                   </div>
                 </div>
              </div>
