--- a/portfolio/accomplishments.html
+++ b/portfolio/accomplishments.html
@@ -54,7 +54,7 @@
     <div class="row main-content">
          <div class="col-md-7 content center">
             <h3><b>C Programming</b></h3>
-             <p>As we all know that C language is basic language of programming . So when i started with the C language ,their were many mistakes (syntex,logical..etc) made by me while coding. But by practicing and learning whole course of C language in udemy. I had get rid of almost all the mistakes. </p>
+             <p>As we all know that C language is basic language of programming. So when I started with the C language, their were many mistakes (syntex,logical..etc) made by me while coding. But by practicing and learning whole course of C language in udemy. I had get rid of almost all the mistakes. </p>
         </div>
         <div class="col-md-5 content-img">
             <img class="img-fluid" src="images/c%20programming.jpg" alt="c language img">
@@ -71,15 +71,15 @@
         </div>
          <div class="col-md-7 content center">
             <h3><b>HTML 5</b></h3>
-             <p><b>Html</b> is know as skeleton of web page.I was very much interested in web design ,and started with <b>Html</b>.By learning on various online plateforms ,first on youtube then on udemy but still was struggling with html.And then finally after completing the web design course of university of michigan. I  had gain great knowledge and fluency in web design.</p>
+             <p><b>Html</b> is know as skeleton of web page. I was very much interested in web design, and started with <b>Html</b>. By learning on various online plateforms, first on youtube then on udemy but still was struggling with html. And then finally after completing the web design course of university of michigan. I  had gain great knowledge and fluency in web design.</p>
         </div>
       </div>       
     <!-- end of row(html 5) -->
      <div class="row main-content">
          <div class="col-md-7 content center">
             <h3><b>Css 3</b></h3>
-             <p>Cascading style sheet is use to add cool look to your page.The main feature of css 3 is selectors, which help designers to select specific elements on <b>DOM</b>.
-             Another one is pseudo classes which includes different properties (hover,active,first-child ,nth-child etc),which will help us to work precisely and reducing burden of giving each and element class to style it in odd/even    manner.</p>
+             <p>Cascading style sheet is use to add cool look to your page. The main feature of css 3 is selectors, which help designers to select specific elements on <b>DOM</b>. 
+             Another one is pseudo classes which includes different properties (hover,active,first-child ,nth-child etc), which will help us to work precisely and reducing burden of giving each and every element class to style it in simultanuesoly.</p>
         </div>
         <div  class=" col-md-5 content-img">
             <img class="img-fluid" src="images/css3.jpg" alt="css3 img">
@@ -94,14 +94,14 @@
         
          <div class=" col-md-7 content center">
              <h3><b><abbr title="javascript">JS</abbr></b></h3>
-             <p><b>Javascript</b> is an Programming language,used to add interactivity in the web pages. <b>It is client side programming language. Javascript Uses <abbr title="Document Object Model">DOM</abbr>to interact with document using Application programming interface(APIs). <abbr title="Document Object Model">DOM</abbr>is a tree structure of html document . Where each node is an object. </b></p>
+             <p><b>Javascript</b> is a Programming language, used to add interactivity in the web pages. <b>It is client side programming language. Javascript Uses <abbr title="Document Object Model">DOM</abbr>to interact with document using Application programming interface(APIs). <abbr title="Document Object Model">DOM</abbr>is a tree structure of html document . Where each node is an object. </b></p>
         </div>
     </div>    
     <!-- end of row(javascript) -->
      <div class="row main-content">
          <div class="col-md-7 content center">
             <h3><b>Responsive Design</b></h3>
-             <p><b>A responsive design adjust for different screen size and viewports.We can make web pages responsive using two ways.First one is using media queries and changing the css properties according to the screen size. And the second one is using frameworks like bootstrap .</b> </p>
+             <p><b>A responsive design adjust for different screen size and viewports. We can make web pages responsive using two ways. First one is using media queries and changing the css properties according to the screen size and the second one is using frameworks like bootstrap.</b> </p>
         </div>
         <div  class="col-md-5 content-img">
             <img class="img-fluid" src="images/Responsive_web_design_6.jpg" alt="responsive web design img">
