--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
                     
                     <div class="col-sm-9 col-md-8">
                         <h1>Adil Wadhwania</h1>
-                        <p>Hi Friends ,I am currently a student and stuydying at AIT(Ahmedabad)</p>
+                        <p>Hi Friends, I am currently a student and studying at AIT(Ahmedabad)</p>
                      <div class="gif col-sm-12 col-md-8">      
                         <img  class="img-fluid aboutme-img" src="images/learn.gif" alt="learning gif">
                      </div>        
