--- a/portfolio/accomplishments.html
+++ b/portfolio/accomplishments.html
@@ -108,7 +108,7 @@
      <div class="row main-content webdesignCerti">
        <div class="col-md-12 center">
          <h3>Web Design Certificate (Coursera)</h3>  
-           <a class="btn btn-primary stretched-link"  href="files/web%20design.pdf" target="_blank">View Certificate</a>
+           <a class="btn btn-info stretched-link"  href="files/web%20design.pdf" target="_blank">View Certificate</a>
        </div>   
      </div>    
         
