--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -140,7 +140,7 @@
            <p style="padding-left: 2%">  Currently studing B.Tech in IT, working on web development and looking for a job related to Java technology (back-end development).</p>       
           </div>
          <div class="row resume">   
-           <div class="col-md-12 col-lg-5 resume-column" style="margin-top: 0;"> 
+           <div class="col-md-12 col-lg-5 resume-column rescol1" style="margin-top: 0;"> 
              <p style="margin-left:10%;">
                 <a class="btn btn-primary stretched-link" target="_blank" href="files/AdilWadhwania_Resume.pdf" >View Resume</a>
              </p>
