--- a/portfolio/accomplishments.html
+++ b/portfolio/accomplishments.html
@@ -108,7 +108,7 @@
      <div class="row main-content webdesignCerti">
        <div class="col-md-12 center">
          <h3>Web Design Certificate (Coursera)</h3>  
-           <a class="btn btn-info stretched-link"  href="files/web%20design.pdf" target="_blank">View Certificate</a>
+           <a class="btn btn-info stretched-link"  href="files/web%20design.pdf" target="_blank">Certificate</a>
        </div>   
      </div>    
         
@@ -127,13 +127,13 @@
          <div class="col-md-6">
            <h3>ArrayList and Structured data (Coursera) </h3><br>
             <div class="certificate">  
-                <a class="btn btn-info stretched-link" target="_blank"  href="files/ArrayList%20and%20structured%20data%20duke.pdf" >View Certificate</a>
+                <a class="btn btn-info stretched-link" target="_blank"  href="files/ArrayList%20and%20structured%20data%20duke.pdf" >Certificate</a>
             </div>
          </div>
            <div class="col-md-6">
                <h3>Java Programming: Solving Problems with Software (Coursera)</h3>
              <div class="certificate">  
-               <a class="btn btn-info stretched-link" target="_blank"  href="files/solving%20problems%20with%20software.pdf" >View Certificate</a></div> 
+               <a class="btn btn-info stretched-link" target="_blank"  href="files/solving%20problems%20with%20software.pdf" >Certificate</a></div> 
          </div>
        </div>
     </div> 
