--- a/portfolio/future_goals.html
+++ b/portfolio/future_goals.html
@@ -49,7 +49,7 @@
     <div class="row"> 
       <div class=" col-md-12">    
         <div class="jumbotron">
-          <h1 class="display-4 center ">Java</h1>
+          <h1 class="display-4 center ">Spring Boot</h1>
             <img class="d-md-block sm-img" src="images/spring%20boot.jfif" alt="spring boot">
           <p class="lead">Java Spring Boot simplifies development of web applications and microservices with Java Spring Framework.</p>
           <hr class="my-4">
