--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,9 +34,9 @@
         
         <header>
                 <div class="row">
-                    <div class="col-sm-3 col-lg-4">
+                  <!--  <div class="col-sm-3 col-lg-4">
                         <a href="index.html"><img class="img-fluid profile-pic" style=""  src="images/profile.jpg" alt="profile pic" ></a> 
-                    </div>
+                    </div>-->
                     
                     <div class="col-sm-9 col-md-8">
                         <h1>Adil Wadhwania</h1>
