--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -88,7 +88,7 @@
                         <p>Mother's Name : Sonal Wadhwania</p>
                         <p>Gender : Male</p>
                         <p>Birthday : April 14,2001</p>
-                    <p id="age">22</p>
+                    <p id="age">Age : 22</p>
                     <p>Nationality : Indian</p>
                 </details>
             </div>
